syntax = "proto3";

option csharp_namespace = "GrpcServer.Web.Protos";

enum EmployeeStatus {
	NORMAL= 0;
	ON_VOCATION = 1;
	RESIGNED = 2;
	RETIRED = 3;
}